--- a/CarService/Orders/OrderForm.resx
+++ b/CarService/Orders/OrderForm.resx
@@ -121,7 +121,7 @@
   <data name="pictureBoxUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        qgAAAKoBBgpwTwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHTSURBVEhLzdVL
+        qQAAAKkBq7NRIgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHTSURBVEhLzdVL
         KGdRAMfxa7CcvB+DQZ4lsZmwU7JWahaKSCwsZGOmLEgoWVpY2dgYo2ZSKBtslOwk0jQLyjPvKFtmvr/r
         nvz73/vvXq/yq0/9z7nn8T/33nOu9Z7yGTWoQJYqXiNVmMAF/oXZxzhK4ZtK/MAnu2RZ6ZiFGewef7Ho
         +IM7mGtTSETEjECN+1GOM6d8ih4kIzyq+w61UdsDlMAz9VCjLZgOC0iFXzTRPNTnGPlwJQVaqhrJOlqh
@@ -145,6 +145,9 @@
     <value>True</value>
   </metadata>
   <metadata name="CarID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Details.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
